--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@
   .cursor-pointer {
     cursor: pointer;
   }
+/* Add this to your Payment.css or global CSS */
+.tippy-tooltip {
+  font-size: 0.875rem;
+  padding: 6px 10px !important;
+  background-color: rgb(0, 0, 0) !important;
+}
+
+.tippy-arrow {
+  color: rgb(0, 0, 0) !important;
+}
+
+.text-truncate {
+  vertical-align: middle;
+}
