--- a/src/components/styles/LayoutSidebar.css
+++ b/src/components/styles/LayoutSidebar.css
@@ -13,7 +13,7 @@
 }
 
 .container-fluid {
-  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   overflow: hidden; 
 }
 
@@ -37,7 +37,7 @@
 
 
 .min-vh-100 {
-  min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
   height: 100%;
 }
 
